# eidolon

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  eidolon.dockerfile  push_to_docker.sh  pyproject.toml  renovate.json  requirements.txt  ruff.toml  tags.json  unbound.sh
.github/workflows/: ci.yml  publish.yml
data/: publicdns_gb.sql
hooks/: build
python/: dnsresolver.py  generate_nginx_conf.py  publicdns_gb.txt  resolver_db.py  resolver_import.py  resolver_publicdns.py  resolvers.sql  subbrute_resolvers.txt
src/eidolon/: __init__.py  cli.py  fetch.py  filter.py  nginx.py
tests/: __init__.py  conftest.py  test_cli.py  test_docker.py  test_filter.py  test_nginx.py
tests/fixtures/: sample.csv  sample_real_format.csv
working/: README  nginx.conf  resolvers.db
