[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eidolon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "responses",
    "ruff",
    "mypy",
    "types-requests",
]

[project.scripts]
eidolon = "eidolon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eidolon"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/", "tests/"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not docker'"
markers = ["docker: integration tests requiring Docker"]
